frontend/tests/cases/positive/interface-simple-25.gr
interface Simple a where
  simple : a -> a

data A a = A

-- function with complex constraint
simple1 : forall {a : Type} . {Simple (A a)} => a -> a
simple1 x = x
